--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #00025a;
+    --foreground: #00d3f3;
   }
 }
 
@@ -29,9 +29,9 @@ body {
   margin: 0 auto;
   aspect-ratio: 1;
   border-radius: 50%;
-  background: radial-gradient(farthest-side, #ffa516 94%, #0000) top/8px 8px
+  background: radial-gradient(farthest-side, var(--foreground) 94%, #0000) top/8px 8px
       no-repeat,
-    conic-gradient(#0000 30%, #ffa516);
+    conic-gradient(#0000 30%, var(--foreground));
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
   animation: l13 1s infinite linear;
 }
